test/fail/basic_syntax/do_while_hide_vars.lily
#[
SyntaxError: v has not been declared.
    from do_while_hide_vars.lily:9:
]#

do: {
    var v = 10
    continue
} while v == 10
